k8-yaml/userdatasample_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userdatasample
  labels:
    app: userdatasample
spec:
  replicas: 3 
  selector:
    matchLabels:
      app: userdatasample
  template:
    metadata:
      labels:
        app: userdatasample
    spec:
      containers:
        - name: userdatasample
          image: gcr.io/innov-htfr-0mhe-1/userdatasample:v8
          ports:
            - containerPort: 8080
          volumeMounts:
          - name: config-volume
            mountPath: /app/config # Mount path inside the container
      volumes:
      - name: config-volume
        configMap:
          name: my-config-map
