k8-yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: internal-lb-service
  namespace: default
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
spec:
  type: LoadBalancer
  # loadBalancerIP: [STATIC_INTERNAL_IP]   # Optional: Pre-allocate a static internal IP
  selector:
    app: userdatasample
  ports:
  - protocol: TCP
    port: 80       
    targetPort: 8080
