k8-yaml/ingressService.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  #annotations:
 #  kubernetes.io/ingress.class: "nginx" # Or your ingress controller class
    # Optional: Add annotations for TLS/SSL if needed
spec:
  rules:
  - http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: internal-lb-service 
            port:
              number: 80
